--- a/apps/external-secrets.yaml
+++ b/apps/external-secrets.yaml
@@ -17,7 +17,7 @@ spec:
           value: 'true'
   destination:
     namespace: external-secrets
-    name: gke_teg-cloud-bfsi-uk1_asia-south2-b_cluster2
+    name: dev-cluster
   syncPolicy:
     automated: {}
     syncOptions:
