--- a/apps/cert-manager.yaml
+++ b/apps/cert-manager.yaml
@@ -17,7 +17,7 @@ spec:
           value: 'true'
   destination:
     namespace: cert-manager
-    name: dev-cluster
+    name: in-cluster
   syncPolicy:
     automated: {}
     syncOptions:
