--- a/apps/external-secrets.yaml
+++ b/apps/external-secrets.yaml
@@ -17,7 +17,7 @@ spec:
           value: 'true'
   destination:
     namespace: external-secrets
-    name: dev-cluster
+    name: in-cluster
   syncPolicy:
     automated: {}
     syncOptions:
