--- a/apps/guestbook.yaml
+++ b/apps/guestbook.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   destination:
     namespace: guestbook
-    name: dev-cluster
+    name: in-cluster
   project: default
   source:
     path: general/helm-guestbook
