--- a/app-of-apps.yaml
+++ b/app-of-apps.yaml
@@ -11,7 +11,9 @@ spec:
     repoURL: 'https://github.com/pushpendrasingh3/argo-cd-app-of-apps-demo'
     targetRevision: HEAD
   project: default
-   syncPolicy:
-     automated:
-       prune: true
-       selfHeal: true
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
+    syncPolicy:
+      - CreateNamespace=true  
