--- a/apps/guestbook.yaml
+++ b/apps/guestbook.yaml
@@ -8,10 +8,10 @@ metadata:
 spec:
   destination:
     namespace: guestbook
-    name: gke_teg-cloud-bfsi-uk1_asia-south2-b_cluster2
+    name: cluster2
   project: default
   source:
-    path: general/helm-guestbook
+    path: helm-guestbook
     repoURL: https://github.com/argoproj/argocd-example-apps
     targetRevision: HEAD
   syncPolicy:
